updated asciidoctor plugin, changed layout of files, so I can have code and slides in one repository

--- a/slides/src/main/slides/index.adoc
+++ b/slides/src/main/slides/index.adoc
@@ -14,3 +14,22 @@
 :customcss: css/custom.css
 :icons: font
 :title-slide-background-image: pexels-pixabay-327049.jpg
+
+== code
+
+[source,java]
+----
+System.out.println("Hello");
+----
+
+== diagrams
+
+[graphviz]
+----
+digraph{
+    A->B
+    C->D
+    D->B
+    B->C
+}
+----
